--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,17 @@ dependencies {
     implementation 'com.github.parse-community.Parse-SDK-Android:parse:1.18.5'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     // for logging API calls to LogCat
+
+    //noinspection GradleCompatible
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    //noinspection GradleCompatible
+    implementation "com.android.support:design:27.1.1"
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+
+   // implementation 'com.parse:parseui-widget-android:0.0.2'
+
 }
